[package]
name = "yew-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
dotenvy = "0.15.5"
dotenvy_macro = "0.15.1"
gloo = "0.8.0"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = "1"
serde_json = "1"
thiserror = "1.0.35"
pulldown-cmark = "0.9.2"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]